// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given Chrome, when rendering, then show link 1`] = `
<Shell>
  <Jumbotron
    fluid={false}
  >
    <h1>
      Install the extension
    </h1>
  </Jumbotron>
  <p>
    Please install 
    <a
      href="chrome url"
    >
      this browser extension
    </a>
     in order to store your accounts in a secure way. Once done, authorize the Logion wallet to access it and create or import an account.
  </p>
</Shell>
`;

exports[`Given Firefox, when rendering, then show link 1`] = `
<Shell>
  <Jumbotron
    fluid={false}
  >
    <h1>
      Install the extension
    </h1>
  </Jumbotron>
  <p>
    Please install 
    <a
      href="firefox url"
    >
      this browser extension
    </a>
     in order to store your accounts in a secure way. Once done, authorize the Logion wallet to access it and create or import an account.
  </p>
</Shell>
`;

exports[`Given unsupported browser, when rendering, then show message 1`] = `
<Shell>
  <p>
    Your browser is currently not supported, please try with
    <a
      href="https://www.google.com/chrome/"
    >
      Chrome
    </a>
     or
    <a
      href="https://www.mozilla.org/firefox/"
    >
      Firefox
    </a>
  </p>
</Shell>
`;
